refactored alignment 	modified:   index.html: wrapper for content and p for footer text; 	modified:   stylesheet.css: removed svg, moved minWH to body, 	removed useless position absolute, added wrapper, fixed footer 	alignment with table-cell

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,30 +25,20 @@ body {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	cursor: pointer
+	cursor: pointer;
+	min-width: 65em;
+	min-height: 35em;
 }
-
-svg {
-
-}
-
 #main {
-	position: absolute;
-	top: 0; 
-	right: 0; 
-	bottom: 0; 
-	left: 0;
 	width: 100%;
 	height: 100%;
 }
 
 #scheme {
-	position: absolute;
 	width: 100%;
 	height: 100%;
-	min-width: 60em;
-	min-height: 35em;
 }
+
 #popup {
 	display: none;
 	position: absolute;
@@ -56,32 +46,36 @@ svg {
 	bottom: 5%;
 	right: 1%;
 	width: 25%;
-	min-width: 20em;
-	overflow: hidden;
+
 	border-bottom: 1px solid;
 	border-left: 1px solid;
 	border-right: 1px solid;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-#popup .content {
-	position: absolute;
-	top: 0;
-	bottom: 25px;
-	left: 0;
-	right: 0;
+
+#popup .wrapper {
+	height: 95%;
 	overflow: auto;
-	padding: 20px;
+}
+
+#popup .content {
+	margin: 20px;
 }
 #popup .footer {
-	position: absolute;
+	display: table;
+	position: relative;
+	height: 5%;
 	width: 100%;
-	bottom: 0;
+	border-top: 1px solid white;
+}
+#popup .footer p {
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
 	font-family: 'Comic Sans MS';
 	text-align: center;
-	font-size: 1em;
-	border-top: 1px solid white;
 	color: white;
-	height: 25px;
 }
 
 #popup h1 {
@@ -107,12 +101,12 @@ svg {
 	margin-bottom: 0.5em;
 }
 
-#popup a {
+#popup .content a {
 	text-decoration: none;
 	color: white;
 }
 
-#popup a:hover {
+#popup .content a:hover {
 	color: white;
 	text-decoration: underline;
 }
